<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <TextView
        android:text="ID"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:id="@+id/db_id"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:ems="10"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:id="@+id/title_row" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Location"
        android:ems="10"
        android:textColor="#000000"
        android:layout_below="@+id/title_row"
        android:layout_alignStart="@+id/title_row"
        android:layout_marginTop="34dp"
        android:id="@+id/location_row" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:textColor="#000000"
        android:ems="10"
        android:layout_alignTop="@+id/title_row"
        android:layout_toEndOf="@+id/title_row"
        android:id="@+id/date_row" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/time"
        android:textColor="#000000"
        android:ems="10"
        android:layout_alignTop="@+id/location_row"
        android:layout_toEndOf="@+id/location_row"
        android:id="@+id/time_row" />


</RelativeLayout>
